<resources>
    <string name="app_name">Assignments</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_name">cohncena2013</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sem_list">SemListActivity</string>
    <string name="title_activity_sem_list_activty">SemListActivty</string>
    <string name="title_activity_semester">SemesterActivity</string>

    <string name="titlei">200016052000</string>
    <string name="adUnitId">ca-app-pub-4441201959431024/2234816025</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="spiiner_value">Spiiner Value</string>
    <string name="upload">UPLOAD</string>
    <string name="listview">ListView</string>
    <string name="select_file">SELECT FILE</string>
    <string name="assignments">Assignments</string>
    <string name="enter_app_r_id_code">Enter App R_ID Code</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="tab1">Assign</string>
    <string name="tab2">Pract</string>
    <string name="tab3">Others</string>
    <string name="name_test">Name</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="interstitial_id">ca-app-pub-4441201959431024/8282006169</string>
    <string name="app_id">ca-app-pub-4441201959431024~1191281378</string>
    <string name="only_for_admin">*only for admin</string>
    <string name="verify_admin">Verify Admin</string>


</resources>
