<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivty">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:layout_scrollFlags="scroll|enterAlways"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Assignments"
            android:textSize="24sp" />

    </android.support.v7.widget.Toolbar>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:textSize="34sp"
    android:textColor="#000"
    android:text="Admin Login"

    android:fontFamily="@font/mikado"
    android:layout_below="@id/toolbarLogin"
    android:layout_marginTop="45dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/admin_login_et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/login_et"
            android:hint="@string/enter_app_r_id_code"
            android:padding="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/admin_login_et2"
            android:fontFamily="@font/raleway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/login_et"
            android:hint="@string/enter_admin_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/verifyAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:fontFamily="@font/raleway"
            android:padding="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/verify_admin"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="*only for admin"
        android:textSize="24sp"
        android:textColor="#676767"
        />

</RelativeLayout>